# pr-prompt

./: .gitignore  LICENSE  README.md  pylint.toml  pylintrc.toml  pyproject.toml  ruff.toml
.github/agents/: pr-description.agent.md  pr-review.agent.md
.github/workflows/: check-version-bump.yml  publish.yml
src/pr_prompt/: __init__.py  cli.py  diff_parser.py  entrypoint.py  file_filters.py  file_tree.py  generator.py  git_client.py  git_utils.py  markdown_builder.py  new_cli.py  prompt_builder.py
src/pr_prompt/instructions/: description_instructions.py  other_instructions.md  review_instructions.py
src/pr_prompt/utils/: __init__.py  changed_files.py  config.py  diff_parser.py  errors.py  file_tree.py  git_client.py  markdown_parser.py
tests/: conftest.py  test_diff_parser.py  test_pr_prompt.py  test_pr_prompt_2.py
